# graph-layout-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.qrc  basicgraph.h  basicgraphparser.cpp  basicgraphparser.h  deployWasm.json  flickable-qml.pro  graph-layout-gui.pro  graphcalculator.cpp  graphcalculator.h  graphengine.cpp  graphengine.h  graphlab.cpp  graphlayout.cpp  graphlayout.h  graphlineproxymodel.cpp  graphlineproxymodel.h  graphmodel.cpp  graphmodel.h  graphnodesproxymodel.cpp  graphnodesproxymodel.h  igraph.h  line.cpp  line.h  main.cpp  qml.qrc  qmldir  randomgraphexample.cpp  randomgraphexample.h  section.cpp  section.h  starter.cpp  starter.h  tempinputwidget.cpp  tempinputwidget.h  twodvector.cpp  twodvector.h
.github/workflows/: build_linux.yml  build_wasm.yml  build_windows.yml
GraphGeometry/: CMakeLists.txt
GraphGeometry/include/: line.h  mathematics.h  point.h  section.h  twodvector.h
GraphGeometry/src/: line.cpp  point.cpp  section.cpp  twodvector.cpp
include/: basicgraph.h  basicgraphparser.h  colorschemesmodel.h  graphlab.h  graphlayout.h  graphnodesproxymodel.h  randomgraphexample.h
qml/: GraphField.qml  Header.qml  RectangeGraphNode.qml  RectangleGraphNode.qml  RoundGraphNode.qml  ToolbarControls.qml  ZoomableField.qml  ZoomableObject.qml  main.qml
qml/Graph/: GraphLine.qml  GraphNode.qml  GraphView.qml
src/: basicgraph.cpp  basicgraphparser.cpp  colorschemesmodel.cpp  graphlab.cpp  graphlayout.cpp  graphnodesproxymodel.cpp  main.cpp  randomgraphexample.cpp  src.pro
